--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   
 </head>
 <body>
+  <!--CSS Spinner-->
+<div class="spinner-wrapper">
+<div class="spinner"></div>
+</div>
   <section class="menu cid-qNDOQTT8bC" once="menu" id="menu2-h">
 
     
