--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
   
 </head>
 <body>
+  < !-- jQuery Plugin -->
+< script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"> <  /script>
+ 
+< !-- Preloader -->
+< script type="text/javascript">
+    //< ![CDATA[
+        $(window).load(function() { // makes sure the whole site is loaded
+            $('#status').fadeOut(); // will first fade out the loading animation
+            $('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website.
+            $('body').delay(350).css({'overflow':'visible'});
+        })
+    //]]>
+< /script>
+  
+  
+  
+  
+  
+  
   <!--CSS Spinner-->
 <div class="spinner-wrapper">
 <div class="spinner"></div>
