--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
     position:absolute;
     left:50%; /* centers the loading animation horizontally one the screen */
     top:50%; /* centers the loading animation vertically one the screen */
-    background-image:url(www.yourdomain.com/assets/images/loading-image.gif); /* path to your loading animation */
+    background-image:url(https://drbbsingh.github.io/editor/assets/images/loading-image.gif); /* path to your loading animation */
     background-repeat:no-repeat;
     background-position:center;
     margin:-100px 0 0 -100px; /* is width and height divided by two */
