create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="carousel slide cid-rZ5eqT9ddy" data-interval="false" id="slider1-10">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="carousel slide cid-rZ5eqT9ddy" data-interval="false" id="slider1-10">
 
     
 
@@ -668,7 +668,7 @@
                     <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                     </div>
-                    <form class="block mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w226Ugm5vaLgLanvX+gE69IBs7d2mPfpThVh0TVNAa3o9JCikRtz6PjHdmzzL2VIqHn5PQ6jH73lVL05x0aFfksz72BXInfgtWLD1tut0KI19ZEyDuP0bboiBW09Y57/">
+                    <form class="block mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vrZMA4CkzjT01+vxyMnEVGpzMT1welWZDtAy53cRgxstcJLKqNEqyQBYgxbrCmiaHIq7OxJyIvmTqVeMwYMWx719VYQVDY8c9pGzaeUnRzyS1DbvwCf6vhbpN09yoyP8">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-w">
