--- a/index.html
+++ b/index.html
@@ -749,13 +749,13 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: bbsingh.1212@gmail.com &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>Phone: +91 9311662840 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
+                    Email: bbsingh.1212@gmail.com &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Links
                 </h5>
-                <p class="mbr-text"><a href="assets/files/C-V.pdf">CV(PDF)</a><a href="assets/files/C-V.pdf" target="_blank">&nbsp;</a><br><a href="https://wa.me/+919311662840">WhatsApp</a></p>
+                <p class="mbr-text"><a href="assets/files/C-V.pdf">CV(PDF)</a><a href="assets/files/C-V.pdf" target="_blank">&nbsp;</a></p>
             </div>
         </div>
         <div class="footer-lower">
