--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-5" href="tel:+919311662840">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
-                    +91 9311662840</a></div>
+                   </a></div>
         </div>
     </nav>
 </section>
